[NIAD-3132] Addressed PR Comment https://github.com/NHSDigital/nia-patient-switching-standard-adaptor/pull/695#discussion_r1675588207